despatma/tests/fail/dependency_container/unsupported_impl_types.stderr
error: This impl item is not supported
 --> tests/fail/dependency_container/unsupported_impl_types.rs:7:5
  |
7 |     const SIZE: usize = 1;
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: This impl item is not supported
 --> tests/fail/dependency_container/unsupported_impl_types.rs:9:5
  |
9 |     type DB = Sqlite;
  |     ^^^^^^^^^^^^^^^^^

error: This impl item is not supported
  --> tests/fail/dependency_container/unsupported_impl_types.rs:11:5
   |
11 |     db!();
   |     ^^^^^^

error[E0433]: failed to resolve: use of undeclared type `DependencyContainer`
  --> tests/fail/dependency_container/unsupported_impl_types.rs:19:21
   |
19 |     let container = DependencyContainer::new();
   |                     ^^^^^^^^^^^^^^^^^^^ use of undeclared type `DependencyContainer`
